--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-div[class="container"]{
-    width: 90%;
-    margin: 0 auto;
+    outline: none;
+    font-family: Montserrat;
 }
 
 button, a{
     cursor: pointer;
+}
+
+.row{
+    display: flex;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
 }
