--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -34,6 +34,10 @@ footer {
         list-style-type: none;
         text-decoration: none;
       }
+
+      .li:hover{
+        color: #FE9F31;
+      }
     }
   }
 
