--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -22,13 +22,18 @@ footer {
     .row-1,
     .row-2,
     .row-3 {
-      ul li:first-child a {
+      ul li:first-child {
         font-size: 28px;
         font-weight: 600;
       }
 
+      ul li a{
+        transition: all 0.3s;
+      }
+
       ul li a:hover {
         color: #fe9f31;
+        transition: all 0.3s;
       }
 
       ul li {
