--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -7,10 +7,13 @@ header {
   @media screen and (max-width: 1440px) {
     font-size: 16px;
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1024px) {
     font-size: 14px;
+    .pc-nav{
+      display: none;
+    }
   }
-  
+
 }
 
 .row {
