--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -1,6 +1,3 @@
-@import url(../globalStyles.scss);
-
-
 .dropDown {
   position: relative;
   background-color: "black";
@@ -46,15 +43,23 @@
     flex-direction: column;
     z-index: 1;
     position: absolute;
-    button{
+    button {
       width: 100%;
       border-top: 1px solid gray;
       padding: 5px 10px 5px;
+      transition: all 0.3s;
     }
   }
 
   img[alt="arrowDown"] {
     transform: rotate(180deg);
+    transition: all 0.3s;
+  }
+}
+
+.dropdown-content {
+  button:hover {
+    color: #fe9f31;
     transition: all 0.3s;
   }
 }
