small changes according to desing

--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -13,7 +13,6 @@
     gap: 10px;
     border: none;
     font-size: 20px;
-    margin-right: 5vw;
     div {
       display: inline-block;
       border-radius: 50%;
@@ -43,16 +42,18 @@
     flex-direction: column;
     z-index: 1;
     position: absolute;
+    width: 7vw;
     button {
+      padding-right: 5vw;
       width: 100%;
       border-top: 1px solid gray;
-      padding: 5px 10px 5px;
+      padding: 5px 10px;
       transition: all 0.3s;
     }
   }
 
   img[alt="arrowDown"] {
-    transform: rotate(180deg);
+    // transform: rotate(deg);
     transition: all 0.3s;
   }
 }
