--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -1,7 +1,6 @@
-
 header {
   background-color: #000;
-  padding: 3vh 5vw ;
+  padding: 3vh 5vw;
   color: #fff;
   font-size: 20px;
   font-family: Montserrat;
@@ -10,11 +9,10 @@ header {
   }
   @media screen and (max-width: 1024px) {
     font-size: 14px;
-    .pc-nav{
+    .pc-nav {
       display: none;
     }
   }
-
 }
 
 .row {
@@ -22,15 +20,15 @@ header {
   align-items: center;
   justify-content: space-between;
   .col-4 {
+    width: 33.3%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     input {
       width: 30vw;
       padding: 10px 10px;
       background-color: transparent;
-      border: 1px solid #969696;
-      border-radius: 5px;
+      border: none;
+      border-bottom: 1px solid #969696;
       color: #fff;
       font-family: Montserrat;
       font-size: 16px;
@@ -47,6 +45,27 @@ header {
     }
     img[alt="Phone"] {
       margin-right: 10px;
+      vertical-align: middle;
     }
+    img[alt="Phone"]+p{
+      color: orange;
+      display: inline;
+    }
+    img[alt="search_icon"] {
+      width: 24px;
+      height: 24px;
+    }
+  }
+  .Search_icon-div {
+    border-bottom: 1px solid #969696;
+    padding: 5px 5px;
+    @media screen and (max-width: 1024px) {
+      width: 20vw;
+    }
+  }
+  .col-4:last-child {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5vw;
   }
 }
