--- a/src/assets/styles/components/Catalog.module.scss
+++ b/src/assets/styles/components/Catalog.module.scss
@@ -1,10 +1,19 @@
 .container {
+  position: relative;
+  z-index: 1;
+}
+
+.container_childe {
+  background-color: black;
+  padding: 82px 50px;
+  position: absolute;
   display: flex;
   justify-content: space-between;
-  background-color: black;
-  margin-top: 2rem;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 495px;
-  padding: 82px 0 0 0;
+  z-index: 3;
 }
 
 .row_1 {
@@ -41,10 +50,11 @@ ul li a:hover {
 
 .row_2-characteristic {
   display: flex;
-  width: 19.65vw;
+  width: 23px;
   gap: 20px;
   align-items: center;
 }
+
 .row_2-characteristic p {
   color: #6c6c6c;
   font-size: 15px;
@@ -53,18 +63,19 @@ ul li a:hover {
 
 .title_car {
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 500;
 }
 .price {
   color: #fff;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
 }
 .row_2 {
   display: flex;
-  padding: 56px 32px;
-  width: 52.43vw;
+  padding: 0px 30px 0 30px;
+  align-items: center;
+  width: 655px;
   height: 40vh;
   border-radius: 8px;
   border: 1px solid #5f5f5f;
@@ -72,20 +83,12 @@ ul li a:hover {
 }
 
 .row_2 img {
-  width: 25vw;
+  width: 18vw;
 }
+
 @media screen and (max-width: 1100px) {
   .row_2 {
-    display: flex;
-    padding: 56px 32px;
-    width: 555px;
-    height: 40vh;
-    border-radius: 8px;
-    border: 1px solid #5f5f5f;
-    justify-content: space-between;
-  }
-  .row_2 img {
-    width: 22vw;
+    width: 500px;
   }
 
   .row_1 {
@@ -93,10 +96,9 @@ ul li a:hover {
     width: 30vw;
     justify-content: space-between;
   }
+
   .row_2-characteristic {
+    display: flex;
     gap: 10px;
-  }
-  .row_2-characteristic img {
-    width: 35px;
   }
 }
