--- a/src/assets/styles/components/HeaderNavbar.module.scss
+++ b/src/assets/styles/components/HeaderNavbar.module.scss
@@ -1,6 +1,5 @@
 @import '../globalStyles.scss';
 
-
 .HeaderNav{
     padding: 25px 11vw 0 11vw;
 }
@@ -9,6 +8,7 @@
     justify-content: space-between;
     a{
         transition: all 0.3s;
+        font-family: "Open Sans";
     }
     a:hover{
         color: #FE9F31;
