--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -1,22 +1,22 @@
-@import 'default_variables.scss';
+@import "default_variables.scss";
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    font-family: $font-montserrat;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 
-button, a{
-    cursor: pointer;
+button,
+a {
+  cursor: pointer;
 }
 
-.row{
-    display: flex;
+.row {
+  display: flex;
 }
 
-a{
-    color: #fff;
-    text-decoration: none;
+a {
+  color: #fff;
+  text-decoration: none;
 }
