--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -3,7 +3,7 @@ header {
   padding: 3vh 5vw;
   color: #fff;
   font-size: 20px;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   @media screen and (max-width: 1440px) {
     font-size: 16px;
   }
