--- a/src/assets/styles/components/Catalog.module.scss
+++ b/src/assets/styles/components/Catalog.module.scss
@@ -5,20 +5,18 @@
 
 .container_childe {
   background-color: black;
-  padding: 82px 50px;
+  padding: 82px 100px;
+  font-family: "Montserrat";
   position: absolute;
   display: flex;
   justify-content: space-between;
-  left: 0;
-  right: 0;
   width: 100%;
-  height: 495px;
   z-index: 3;
 }
 
 .row_1 {
   display: flex;
-  width: 25vw;
+  width: 35%;
   justify-content: space-between;
 }
 
@@ -28,6 +26,7 @@ ul {
 
 li {
   margin-top: 16px;
+  font-size: 18px;
   color: #fff;
   line-height: 50px;
 }
@@ -35,6 +34,7 @@ li {
 .title {
   color: #fff;
   font-weight: 700;
+  font-size: 22px;
 }
 
 ul li a:hover {
@@ -75,7 +75,7 @@ ul li a:hover {
   display: flex;
   padding: 0px 30px 0 30px;
   align-items: center;
-  width: 655px;
+  width: 50%;
   height: 40vh;
   border-radius: 8px;
   border: 1px solid #5f5f5f;
