--- a/src/assets/styles/pages/home/ApplicationForm.module.scss
+++ b/src/assets/styles/pages/home/ApplicationForm.module.scss
@@ -22,7 +22,7 @@
   h2 {
     color: #e8e8e8;
     font-family: Inter;
-    font-size: 48px;
+    font-size: 3rem;
     margin-bottom: 12vh;
   }
 
@@ -47,11 +47,11 @@
       &::placeholder {
         color: #b4b4b4;
         font-family: Inter;
-        font-size: 20px;
+        font-size: 1.2rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
-        padding: 10px;
+        padding: 0.6em;
       }
     }
   }
@@ -59,7 +59,7 @@
   button {
     width: 36.5vw;
     height: 9.5vh;
-    padding: 10px;
+    padding: 0.6em;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
@@ -67,7 +67,7 @@
     background: #fe9f31;
     color: #fff;
     font-family: Inter;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
   }
 }
