--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -1,14 +1,10 @@
 header {
   background-color: #000;
-  padding: 3vh 5vw;
+  padding: 3vh 3vw;
   color: #fff;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-family: "Montserrat";
-  @media screen and (max-width: 1440px) {
-    font-size: 16px;
-  }
   @media screen and (max-width: 1024px) {
-    font-size: 14px;
     .pc-nav {
       display: none;
     }
@@ -19,6 +15,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   .col-4 {
     width: 33.3%;
     display: flex;
@@ -52,20 +49,20 @@ header {
       display: inline;
     }
     img[alt="search_icon"] {
-      width: 24px;
-      height: 24px;
+      position: absolute;
+      right: 0;
+      bottom: 25%;
     }
   }
-  .Search_icon-div {
-    border-bottom: 1px solid #969696;
-    padding: 5px 5px;
+  .Search-div {
+    position: relative;
+    display: inline-flex;
     @media screen and (max-width: 1024px) {
       width: 20vw;
     }
   }
   .col-4:last-child {
     display: flex;
-    justify-content: flex-end;
-    gap: 5vw;
+    justify-content: space-around;
   }
 }
