add some features

--- a/src/assets/styles/components/HeaderNavbar.module.scss
+++ b/src/assets/styles/components/HeaderNavbar.module.scss
@@ -9,6 +9,7 @@
     a{
         transition: all 0.3s;
         font-family: "Open Sans";
+        z-index: 5;
     }
     a:hover{
         color: #FE9F31;
