--- a/src/assets/styles/pages/Home/ApplicationForm.module.scss
+++ b/src/assets/styles/pages/Home/ApplicationForm.module.scss
@@ -3,14 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-}
-
-.background-img {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  background-image: url("@images/Group 42.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .application-form {
@@ -31,13 +27,13 @@
     flex-direction: column;
 
     input {
-      width: 36.5vw;
+      width: 100%;
       height: 9.5vh;
       border-radius: 10px;
       border: none;
       outline: none;
-      padding: 10px;
       margin-bottom: 32px;
+      padding: 0.6em;
       font-size: 20px;
       &::placeholder {
         color: #b4b4b4;
@@ -46,8 +42,6 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
-        padding: 0.6em;
-
       }
     }
   }
