--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -1,43 +1,45 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
-
-.mainBlock {
-  margin-bottom: 10vw;;
-  display: inline-block;
+.parentBlock{
+  display: flex;
+  align-items: center;
+  background-color: #D9D7D7;
+  width: 100vw;
+  height: 100vh;
 }
-
+.carImg {
+  height: 446px;
+  padding: 23px;
+  border: 4px solid #FE9F31;
+}
+.firstBlock{
+  width: 50%;
+  margin-right: 7vw;
+  
+}
+.secondBlock{
+  width: 50%;
+}
+.button{
+  font-size: 3 rem;
+  font-size: 1.6rem;
+  width: 19vw;
+  padding: 0.6em;
+  background-color: orange;
+  border-radius: 10px;
+}
 .title {
-  width: 48.54vw;
-  height: 4.5vh;
+  color: #000;
+  font-family: Inter;
   font-size: 2rem;
-  margin-left: 62.29vw;
-  margin-bottom: 1.46vh;
-  margin-top: 20.83vh;
+  font-weight: 700;
 }
 
 .text {
-  // width: 27.64vw;
-  font-size: 1.5em; 
-  margin-left: 62.29vw;
+  color: #000;
+  font-family: Inter;
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin: 21px 0 65px 0;
 }
-
-.carImg {
-  width: 51.68vw;
-  margin-left: 4.94vw;
-  margin-top: -40.40vh;
-}
-
-.button {
-  display: flex;
-  width: 13.9vw;
-  padding: 0.43rem;
-  justify-content: center;
-  background-color: #FE9F31;
-  margin-left: 62.29vw;
-  margin-top: -13.3vh;
-  border-radius: 0.5vw;
-  font-size: 1.5rem;
-
-  &:hover {
-    border: 2px solid #ca7615;
-  }
+.secondBlock{
+  
 }
