--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -6,13 +6,13 @@
   height: 100vh;
 }
 .carImg {
-  height: 446px;
+  height: 44%;
   padding: 23px;
   border: 4px solid #FE9F31;
 }
 .firstBlock{
   width: 50%;
-  margin-right: 7vw;
+  margin-right: 6vw;
   
 }
 .secondBlock{
