--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -1,24 +1,33 @@
-.parentBlock{
+.container{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.row  {
   display: flex;
   align-items: center;
-  background-color: #D9D7D7;
-  width: 100vw;
-  height: 100vh;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-block: 10vh;
 }
+
 .carImg {
-  height: 44%;
   padding: 23px;
   border: 4px solid #FE9F31;
+  border-radius: 15px;
+  width: 100%;
+  img{
+    border: 2px solid #FE9F31;
+    border-radius: 15px;
+  }
 }
-.firstBlock{
-  width: 50%;
-  margin-right: 6vw;
-  
+
+.col-6{
+  width: 48%;
 }
-.secondBlock{
-  width: 50%;
-}
+
 .button{
+  border: none;
   font-size: 3 rem;
   font-size: 1.6rem;
   width: 19vw;
@@ -26,6 +35,7 @@
   background-color: orange;
   border-radius: 10px;
 }
+
 .title {
   color: #000;
   font-family: Inter;
@@ -39,4 +49,5 @@
   font-size: 1.6rem;
   font-weight: 400;
   margin: 21px 0 65px 0;
+  width: 35vw;
 }
