--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -12,11 +12,11 @@
 }
 
 .carImg {
-  padding: 23px;
+  padding: 1vw;
   border: 4px solid #FE9F31;
   border-radius: 15px;
-  width: 100%;
   img{
+    width: 100%;
     border: 2px solid #FE9F31;
     border-radius: 15px;
   }
@@ -28,7 +28,7 @@
 
 .button{
   border: none;
-  font-size: 3 rem;
+  font-size: 3rem;
   font-size: 1.6rem;
   width: 19vw;
   padding: 0.6em;
