--- a/src/assets/styles/components/QuestionItem.module.scss
+++ b/src/assets/styles/components/QuestionItem.module.scss
@@ -21,7 +21,7 @@
       position: relative;
 
       .plus-h {
-        width: 10px;
+        width: 5px;
         height: 100%;
         transition: 0.2s;
         position: absolute;
@@ -31,7 +31,7 @@
         transform: translate(-50%, -50%);
       }
       .hide-h {
-        width: 10px;
+        width: 5px;
         height: 100%;
         transition: 0.2s;
         opacity: 0;
@@ -43,7 +43,7 @@
       }
       .plus-g {
         width: 100%;
-        height: 10px;
+        height: 5px;
         position: absolute;
         background-color: #000;
         left: 50%;
@@ -62,7 +62,6 @@
 
     .questions-text {
       position: absolute;
-      left: 100%;
       color: black;
       opacity: 0.3;
       transition: 0.5s;
@@ -82,7 +81,7 @@
 
     .show {
       position: absolute;
-      left: 0;
+      top: 0;
       color: black;
       transition: 0.5s;
       font-size: 30px;
