--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -52,8 +52,7 @@
     }
   }
 
-  img[alt="arrowDown"] {
-    // transform: rotate(deg);
+  svg[alt="arrowDown"] {
     transition: all 0.3s;
   }
 }
