--- a/src/assets/styles/components/QuestionItem.module.scss
+++ b/src/assets/styles/components/QuestionItem.module.scss
@@ -25,6 +25,8 @@
         height: 100%;
         transition: 0.2s;
         position: absolute;
+        rotate: 0deg;
+        transform-origin: 0 0;
         background-color: #000;
         left: 50%;
         top: 50%;
@@ -34,7 +36,8 @@
         width: 5px;
         height: 100%;
         transition: 0.2s;
-        opacity: 0;
+        rotate: 270deg;
+        transform-origin: 0 0;
         position: absolute;
         background-color: #000;
         left: 50%;
@@ -45,7 +48,22 @@
         width: 100%;
         height: 5px;
         position: absolute;
+        transition: 0.2s;
+        rotate: 0deg;
+        transform-origin: 0 0;
         background-color: #000;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .hide-g {
+        width: 100%;
+        height: 5px;
+        position: absolute;
+        background-color: #000;
+        transition: 0.2s;
+        rotate: -180deg;
+        transform-origin: 0 0;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
