--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -1,10 +1,10 @@
 footer {
   padding-bottom: 2vh;
-  background-color: #000;
+  background-color: #00241b;
   font-family: "Montserrat";
   .logo {
-    padding-left: 3vw;
-    padding-top: 3vw;
+    padding-left: 5vw;
+    padding-top: 6.25vh;
   }
 
   .footer-content {
@@ -21,7 +21,7 @@ footer {
     .row-4 {
       width: 20%;
       ul li:first-child {
-        font-size: 28px;
+        font-size: 1.8rem;
         font-weight: 600;
       }
 
@@ -29,18 +29,17 @@ footer {
         transition: all 0.3s;
       }
 
-      ul li a:hover {
-        color: #fe9f31;
-        transition: all 0.3s;
+      ul li :hover {
+        color: #19746b;
       }
 
       ul li {
         color: #fff;
-        font-family: Inter;
-        font-size: 22px;
+        font-family: Montserrat;
+        font-size: 1.3rem;
         font-style: normal;
-        font-weight: 600;
-        line-height: 70px;
+        font-weight: 300;
+        line-height: 50px;
         letter-spacing: 0.44px;
         list-style-type: none;
         width: 20vw;
@@ -51,13 +50,14 @@ footer {
   .social-media {
     display: flex;
     justify-content: center;
+    margin-bottom: 1.5em;
     ul {
       list-style-type: none;
       display: flex;
     }
 
     li {
-      margin-right: 30px;
+      margin-right: 1.8em;
     }
 
     li:last-child {
