--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -6,7 +6,9 @@ footer {
     padding-left: 5vw;
     padding-top: 6.25vh;
   }
-
+  a{
+    color: #fff;
+  }
   .footer-content {
     display: flex;
     justify-content: center;
