--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -1,9 +1,8 @@
 header {
-  background-color: #000;
-  padding: 3vh 3vw;
-  color: #fff;
+  padding: 2vh 5vw;
   font-size: 1.2rem;
   font-family: "Montserrat";
+  background: #f4f4f0;
   @media screen and (max-width: 1024px) {
     .pc-nav {
       display: none;
@@ -20,59 +19,6 @@ header {
     width: 33.3%;
     display: flex;
     align-items: center;
-    input {
-      width: 30vw;
-      padding: 10px 10px;
-      background-color: transparent;
-      border: none;
-      border-bottom: 1px solid #969696;
-      color: #fff;
-      font-family: Montserrat;
-      font-size: 16px;
-      @media screen and (max-width: 1024px) {
-        width: 20vw;
-      }
-    }
-    input[type="search"]::-webkit-search-cancel-button {
-      appearance: none;
-      width: 20px;
-      height: 20px;
-      background-size: cover;
-    }
-
-    img[alt="Impex Logotype"] {
-      width: 15vw;
-      margin-right: 3vw;
-    }
-    img[alt="2gis"] {
-      margin-right: 5px;
-    }
-    img[alt="Phone"] {
-      margin-right: 10px;
-      vertical-align: middle;
-    }
-    #phone_num{
-      color: orange;
-      display: inline;
-    }
-    svg[alt="search_icon"] {
-      fill: gray;
-      stroke: gray;
-      stroke-width: 1px;
-      position: absolute;
-      right: 15px;
-      bottom: 25%;
-    }
-  }
-  .Search-div {
-    position: relative;
-    display: inline-flex;
-    @media screen and (max-width: 1024px) {
-      width: 20vw;
-    }
-  }
-  .col-4:last-child {
-    display: flex;
-    justify-content: space-around;
+   
   }
 }
