--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -1,29 +1,17 @@
 .dropDown {
   position: relative;
-  background-color: "black";
-  border-radius: "10px";
-  padding: "10px";
-  display: "none";
-  position: "absolute";
   button {
     background-color: transparent;
-    color: #fff;
     display: flex;
     align-items: center;
     gap: 10px;
     border: none;
     font-size: 20px;
     div {
-      display: inline-block;
-      border-radius: 50%;
-      overflow: hidden;
-      width: 35px;
-      height: 35px;
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        border-radius: 50%;
+        vertical-align:text-top;
       }
     }
     @media screen and (max-width: 1440px) {
@@ -35,31 +23,26 @@
   }
 
   .dropdown-content {
-    background-color: black;
+    background-color: #fff;
+    padding: 3px;
     border-radius: 10px;
     display: none;
-    padding: 10px 0 5px 0;
+    gap: 5px;
+    margin-top: 5px;
     flex-direction: column;
     z-index: 99;
     position: absolute;
-    width: 7vw;
+    width: 100%;
     button {
+      background-color: #f5f7f2;
+      border-radius: 7px;
       padding-right: 5vw;
       width: 100%;
-      border-top: 1px solid gray;
       padding: 5px 10px;
-      transition: all 0.3s;
     }
   }
 
   svg[alt="arrowDown"] {
-    transition: all 0.3s;
-  }
-}
-
-.dropdown-content {
-  button:hover {
-    color: #fe9f31;
     transition: all 0.3s;
   }
 }
