--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -8,7 +8,7 @@
     #19746b
   );
   height: 90vh;
-  padding-left: 5rem;
+  padding-left: 5vw;
 }
 
 .title {
@@ -25,8 +25,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   img {
-    width: 45vw;
+    width: 55vw;
   }
 }
 
