--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -1,17 +1,22 @@
 .dropDown {
   position: relative;
   button {
+    padding-left: 10px;
     background-color: transparent;
     display: flex;
     align-items: center;
     gap: 10px;
     border: none;
     font-size: 20px;
+    .langArrow {
+      margin-left: 50px;
+    }
     div {
       img {
         width: 100%;
         height: 100%;
-        vertical-align:text-top;
+
+        vertical-align: text-top;
       }
     }
     @media screen and (max-width: 1440px) {
@@ -24,15 +29,16 @@
 
   .dropdown-content {
     background-color: #fff;
-    padding: 3px;
     border-radius: 10px;
-    display: none;
+    opacity: 0;
+    display: flex;
     gap: 5px;
     margin-top: 5px;
     flex-direction: column;
     z-index: 99;
     position: absolute;
     width: 100%;
+    transition: all .3s;
     button {
       background-color: #f5f7f2;
       border-radius: 7px;
@@ -45,4 +51,13 @@
   svg[alt="arrowDown"] {
     transition: all 0.3s;
   }
+}
+
+.dropdown-content-show {
+  opacity: 1 !important;
+  transition: all .3s;
+}
+
+.langArrow-active {
+  transform: rotate(180deg);
 }
