--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #f4f4f0;
-    overflow-x: hidden;
+body {
+  background-color: #f4f4f0;
+  overflow-x: hidden;
 }
