--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -4,6 +4,11 @@
     }  
   }
   
+  .mob-nav{
+    background-color: #fff;
+    box-shadow: 0 3px 10px 0px #000;
+  }
+
   .row{
     display: flex;
     justify-content: space-between;
