--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -7,6 +7,7 @@
   .mob-nav{
     background-color: #fff;
     box-shadow: 0 3px 10px 0px #000;
+    padding:15px;
   }
 
   .row{
@@ -25,7 +26,7 @@
       position: absolute;
       top: 11px;
       width: 30px;
-      background-color: #fff;
+      background-color: #000;
       height: 2px;
     }
   }
@@ -35,7 +36,7 @@
     position: absolute;
     top: 0;
     width: 30px;
-    background-color: #fff;
+    background-color: #000;
     height: 2px;
   }
   
@@ -44,7 +45,7 @@
     position: absolute;
     bottom: 0;
     width: 30px;
-    background-color: #fff;
+    background-color: #000;
     height: 2px;
   }
   
