--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -8,6 +8,8 @@
     background-color: #fff;
     box-shadow: 0 3px 10px 0px #000;
     padding:15px;
+    z-index: 99;
+    width: 100%;
   }
 
   .row{
