--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -31,7 +31,7 @@
     background-color: #fff;
     border-radius: 10px;
     opacity: 0;
-    display: flex;
+    display:none;
     gap: 5px;
     margin-top: 5px;
     flex-direction: column;
@@ -55,6 +55,7 @@
 
 .dropdown-content-show {
   opacity: 1 !important;
+  display: flex !important;
   transition: all .3s;
 }
 
