--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -13,8 +13,8 @@
 .title {
   width: 40vw;
   font-size: 3vw;
-  font-family: Montserrat;
-  font-weight: 400;
+  font-family: "Gotham Pro";
+  font-weight: 300;
   span {
     color: #19746b;
   }
