--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -5,7 +5,7 @@
   border-radius: 15px;
   background: #fff;
   margin-right: 20px;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   padding: 25px;
   background-color: #e5e5e1;
 
