--- a/src/assets/styles/pages/Home/Catalogs.module.scss
+++ b/src/assets/styles/pages/Home/Catalogs.module.scss
@@ -24,7 +24,7 @@
 
 .catalog-type-title {
   color: #000;
-  font-family: Inter;
+  font-family: "Inter";
   font-size: 42px;
   font-style: normal;
   font-weight: 500;
