--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -36,7 +36,7 @@
 
 .text {
   font-family: "Gotham Pro";
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   margin: 20px 0 65px 0;
   width: 40vw;
 }
@@ -94,7 +94,7 @@
   }
 
   .text {
-    font-size: 1.5rem; 
+    font-size: 1.5vw; 
     margin: 10px 0; 
   }
 }
@@ -118,7 +118,7 @@
   }
 
   .text {
-    font-size: 1.5rem; 
+    font-size: 1.5vw; 
     margin: 10px 0; 
   }
 }
