--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -25,6 +25,7 @@
   color: #19746B;
   border-radius: 10px;
   float: right;
+  transition: all .2s;
 }
 
 
@@ -123,4 +124,10 @@
     font-size: 5vw; 
     margin: 10px 0; 
   }
+}
+
+button:hover{
+  background-color: #19746B;
+  color: #fff;
+  transition: all .2s;
 }
